<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amaral.csci3136a2.Validator">

    <TextView
        android:id="@+id/txt_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test you Password!"
        app:layout_constraintBottom_toTopOf="@+id/edt_txt_pass"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/edt_txt_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/btn_val"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Validate!"
        app:layout_constraintBottom_toTopOf="@+id/lbl_strength"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="btnValClick"/>

    <TextView
        android:id="@+id/lbl_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tests Passes (Out of 5):      "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/lbl_strength"
        app:layout_constraintBottom_toBottomOf="@id/lbl_strength"
        app:layout_constraintTop_toTopOf="@id/lbl_strength"
        android:text="0"/>

</android.support.constraint.ConstraintLayout>
